@@ -1,6 +1,7 @@
 Changes in <next release>:
  * Fix loading translator via command line
  * Show horizontal error lines/fills in key
+ * Use iMinuit if available for fitting
 
 Bug fixes in 1.25.1:
  * Fix 2D dataset expressions
